Dropped requirement on library import locaton for class methods in Num. Methods assignment #3

--- a/NumericalMethods/Assignments/MonteCarlo_Template.ipynb
+++ b/NumericalMethods/Assignments/MonteCarlo_Template.ipynb
@@ -22,10 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "# Place your Monte Carlo class here...\n",
-    "# Place your dependent library imports for the member methods in the\n",
-    "# constructor method (only the libraries that are actually used by those \n",
-    "# methods; no extras)."
+    "# Place your Monte Carlo class here..."
    ]
   },
   {
