Added Num. Methods assignment #5 (Secant Method) webpage/template notebook and updated the assignments page accordingly.  Fixed a grammatical typo in assignment 4 webpage.  Removed an old attempt at the assignment 4 template.

--- a/NumericalMethods/Assignments/Secant_Template.ipynb
+++ b/NumericalMethods/Assignments/Secant_Template.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bisection Method Assignment"
+    "# Secant Method Assignment"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bisection Method Toolbox"
+    "## Secant Method Toolbox"
    ]
   },
   {
@@ -29,14 +29,14 @@
    },
    "outputs": [],
    "source": [
-    "# Place your Bisection class here..."
+    "# Place your root-finder class here..."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solving equations with the bisection method"
+    "## Solving equations with the secant method"
    ]
   },
   {
@@ -94,51 +94,6 @@
    "source": [
     "# Solve for the equation's root using your toolbox method here...\n",
     "# Remember to print the result."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Solving equations with SymPy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Solving the first symbolic equation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Solve the first specified equation for SymPy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Solving the second symbolic equation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Solve the second specified equation for SymPy"
    ]
   }
  ],
