Added Numerical Methods assignment #10 on multi-equation Runge-Kutta and updated the assignments index accordingly.  The ODE_template of assignment #9 should only have been changed insofar as Jupyter-Notebooks did an autosave while it was open.

--- a/NumericalMethods/Assignments/MultiODE_template.ipynb
+++ b/NumericalMethods/Assignments/MultiODE_template.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving an ODE with Euler's and Runge-Kutta Methods"
+    "# Solving multiple ODE's with the Runge-Kutta Method"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# Put your class code here....  \n",
-    "# It must contain an Euler function and a 4th-order Runge-Kutta function"
+    "# It must contain your 4th-order, multi-equation Runge-Kutta function"
    ]
   },
   {
@@ -77,7 +77,8 @@
    },
    "outputs": [],
    "source": [
-    "# Assign variables that pertain to the entire assignment here..."
+    "# Assign variables that pertain to the entire assignment here...\n",
+    "# (Initial values, number of steps, range of the independent variable, etc.)"
    ]
   },
   {
@@ -102,7 +103,8 @@
    },
    "outputs": [],
    "source": [
-    "# Place the class for your equation object here..."
+    "# Place the class for your equation object here...\n",
+    "# Remember that this class must contain all of the methods for your equations."
    ]
   },
   {
@@ -127,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Euler's Method"
+    "## 4th-Order Runge-Kutta Method"
    ]
   },
   {
@@ -138,14 +140,14 @@
    },
    "outputs": [],
    "source": [
-    "# Solve the assigned ODE using Euler's Method here..."
+    "# Solve the assigned ODE's simultaneously using the 4th-Order Runge-Kutta Method here..."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4th-Order Runge-Kutta Method"
+    "Printing the final values for x & y..."
    ]
   },
   {
@@ -156,25 +158,7 @@
    },
    "outputs": [],
    "source": [
-    "# Solve the assigned ODE using the 4th-Order Runge-Kutta Method here..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exact Analytical Solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Generate the (x,y) coordinates using the exact analytical solution here..."
+    "# Print the results of x and y for the last time step here..."
    ]
   },
   {
@@ -186,14 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Plot the results from the Euler's Method, the Runge-Kutta Method, \n",
-    "# and the Exact Analytical Solution on the same plot here....\n",
+    "# Plot the results for x and y against the independent variable t...\n",
     "# Remember to include axes titles and a legend."
    ]
   }
