--- a/NumericalMethods/AssignmentDevelopment/Integration/stepDataGenerator.ipynb
+++ b/NumericalMethods/AssignmentDevelopment/Integration/stepDataGenerator.ipynb
@@ -253,9 +253,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:jupyterNumpyMatplotlibSympy]",
+   "display_name": "Python [conda env:p35]",
    "language": "python",
-   "name": "conda-env-jupyterNumpyMatplotlibSympy-py"
+   "name": "conda-env-p35-py"
   },
   "language_info": {
    "codemirror_mode": {
