(Hopefully) finished assignment #11 and its supporting files.  Linked it into the assignments index page.

--- a/NumericalMethods/Assignments/Trapezoid_template.ipynb
+++ b/NumericalMethods/Assignments/Trapezoid_template.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "# Integrate the equation for the estimated portion of the experiment\n",
-    "# and print the result here..."
+    "# and print the result here... Use (linear data end) <= t <= (step data beginning)"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "# Run your integration method over the entire experiment using your toolbox object\n",
-    "# and print the total integration result here..."
+    "# and print the total integration result here... (You cannot simply add the previous pieces together)"
    ]
   }
  ],
